--- a/notebooks/cot_parsing_dev.ipynb
+++ b/notebooks/cot_parsing_dev.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/brianfitzgerald/smolmodels/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from IPython.display import display, Markdown\n",
     "import polars as pl\n",
@@ -251,24 +260,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "77685it [00:12, 6329.64it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "defaultdict(<class 'int'>, {'no_code_block': 46225, 'no_output_or_thought': 52005, 'multiple_outputs': 2884, 'chinese_found': 6706, 'no_thought': 40})\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def extract_code_block(msg: str) -> List[str]:\n",
     "    match_pattern = r\"```(\\w+)?\\n(.*?)```\"\n",
@@ -355,24 +349,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_rows_pl.write_parquet(\"openo1_sft_formatted_thoughts_conversations.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (9_466, 4)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>prompt</th><th>chosen</th><th>rejected</th><th>id</th></tr><tr><td>str</td><td>str</td><td>str</td><td>str</td></tr></thead><tbody><tr><td>&quot;Use the function to debug the …</td><td>&quot;One possible solution to preve…</td><td>&quot;def debug_program(arr):\n",
+       "&nbsp;&nbsp;&nbsp;&nbsp;n …</td><td>&quot;8c94f83f-6a5a-5f8c-98a2-e242d7…</td></tr><tr><td>&quot;Write an algorithm in Python t…</td><td>&quot;Here is the algorithm to deter…</td><td>&quot;def is_prime(n):\n",
+       "&nbsp;&nbsp;&nbsp;\n",
+       "&nbsp;&nbsp;&nbsp;# Chec…</td><td>&quot;9d7911ee-5778-5009-8fc3-ee297f…</td></tr><tr><td>&quot;Compose a function named avera…</td><td>&quot;Here is the implementation of …</td><td>&quot;def average_list(lst):\n",
+       "&nbsp;&nbsp;&nbsp;&nbsp;if …</td><td>&quot;01a2d265-9f76-54f7-aa77-066c61…</td></tr><tr><td>&quot;Rewritten Test:\n",
+       "Write a functi…</td><td>&quot;Here is a possible implementat…</td><td>&quot;Here is a function that delete…</td><td>&quot;3dfc33c0-5c2d-524e-b2d5-afd356…</td></tr><tr><td>&quot;Write a program that extracts …</td><td>&quot;Here is a corrected implementa…</td><td>&quot;```python\n",
+       "import re\n",
+       "\n",
+       "def extra…</td><td>&quot;776d9f46-669e-52e6-8e6b-70944f…</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>&quot;Imagine you are a spy trying t…</td><td>&quot;Sure, I can help you with that…</td><td>&quot;To solve this puzzle, we can c…</td><td>&quot;3855e084-90c3-54f0-a58f-872bc4…</td></tr><tr><td>&quot;Can you design a program in Py…</td><td>&quot;Yes, it is possible to design …</td><td>&quot;Yes, I can design a program in…</td><td>&quot;644979b5-5286-58ad-a521-705023…</td></tr><tr><td>&quot;How can I use Python and the p…</td><td>&quot;Certainly! Here&#x27;s an example c…</td><td>&quot;To generate a comprehensive re…</td><td>&quot;a704864d-af10-5b5c-9e30-f1df9d…</td></tr><tr><td>&quot;Utilize the pre-existing Pytho…</td><td>&quot;Yes, I can help you with that.…</td><td>&quot;To generate a random sequence …</td><td>&quot;a40a2106-21c5-5d13-909d-51d1a3…</td></tr><tr><td>&quot;How can I use Python to genera…</td><td>&quot;Sure! Here&#x27;s a Python code tha…</td><td>&quot;Sure, here&#x27;s a Python code tha…</td><td>&quot;82ae549a-9255-5980-9e94-aab63a…</td></tr></tbody></table></div>"
+      ],
       "text/plain": [
-       "(16050, 3)"
+       "shape: (9_466, 4)\n",
+       "┌────────────────────────┬────────────────────────┬────────────────────────┬───────────────────────┐\n",
+       "│ prompt                 ┆ chosen                 ┆ rejected               ┆ id                    │\n",
+       "│ ---                    ┆ ---                    ┆ ---                    ┆ ---                   │\n",
+       "│ str                    ┆ str                    ┆ str                    ┆ str                   │\n",
+       "╞════════════════════════╪════════════════════════╪════════════════════════╪═══════════════════════╡\n",
+       "│ Use the function to    ┆ One possible solution  ┆ def                    ┆ 8c94f83f-6a5a-5f8c-98 │\n",
+       "│ debug the …            ┆ to preve…              ┆ debug_program(arr):    ┆ a2-e242d7…            │\n",
+       "│                        ┆                        ┆     n …                ┆                       │\n",
+       "│ Write an algorithm in  ┆ Here is the algorithm  ┆ def is_prime(n):       ┆ 9d7911ee-5778-5009-8f │\n",
+       "│ Python t…              ┆ to deter…              ┆                        ┆ c3-ee297f…            │\n",
+       "│                        ┆                        ┆    # Chec…             ┆                       │\n",
+       "│ Compose a function     ┆ Here is the            ┆ def average_list(lst): ┆ 01a2d265-9f76-54f7-aa │\n",
+       "│ named avera…           ┆ implementation of …    ┆     if …               ┆ 77-066c61…            │\n",
+       "│ Rewritten Test:        ┆ Here is a possible     ┆ Here is a function     ┆ 3dfc33c0-5c2d-524e-b2 │\n",
+       "│ Write a functi…        ┆ implementat…           ┆ that delete…           ┆ d5-afd356…            │\n",
+       "│ Write a program that   ┆ Here is a corrected    ┆ ```python              ┆ 776d9f46-669e-52e6-8e │\n",
+       "│ extracts …             ┆ implementa…            ┆ import re              ┆ 6b-70944f…            │\n",
+       "│                        ┆                        ┆                        ┆                       │\n",
+       "│                        ┆                        ┆ def extra…             ┆                       │\n",
+       "│ …                      ┆ …                      ┆ …                      ┆ …                     │\n",
+       "│ Imagine you are a spy  ┆ Sure, I can help you   ┆ To solve this puzzle,  ┆ 3855e084-90c3-54f0-a5 │\n",
+       "│ trying t…              ┆ with that…             ┆ we can c…              ┆ 8f-872bc4…            │\n",
+       "│ Can you design a       ┆ Yes, it is possible to ┆ Yes, I can design a    ┆ 644979b5-5286-58ad-a5 │\n",
+       "│ program in Py…         ┆ design …               ┆ program in…            ┆ 21-705023…            │\n",
+       "│ How can I use Python   ┆ Certainly! Here's an   ┆ To generate a          ┆ a704864d-af10-5b5c-9e │\n",
+       "│ and the p…             ┆ example c…             ┆ comprehensive re…      ┆ 30-f1df9d…            │\n",
+       "│ Utilize the            ┆ Yes, I can help you    ┆ To generate a random   ┆ a40a2106-21c5-5d13-90 │\n",
+       "│ pre-existing Pytho…    ┆ with that.…            ┆ sequence …             ┆ 9d-51d1a3…            │\n",
+       "│ How can I use Python   ┆ Sure! Here's a Python  ┆ Sure, here's a Python  ┆ 82ae549a-9255-5980-9e │\n",
+       "│ to genera…             ┆ code tha…              ┆ code tha…              ┆ 94-aab63a…            │\n",
+       "└────────────────────────┴────────────────────────┴────────────────────────┴───────────────────────┘"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# DPO\n",
     "\n",
-    "out_rows_pl.write_parquet(\"openo1_sft_formatted_thoughts_conversations.parquet\")"
+    "# dpo_dataset = load_dataset(\"jondurbin/py-dpo-v0.1\")['train']\n",
+    "# dpo_dataset = dpo_dataset['train']\n",
+    "dpo_dataset_pl = dpo_dataset.to_polars()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -391,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
